# genius-cv

./: pyproject.toml
front-end/: edit_cv.py  home.py  index.py  view_cv.py
notebook/: cv_builder.ipynb
output/: cv.html  cv_v1.html  cv_v2.html  cv_v3.html  cv_v4.html  draft_cv.html
prompts/: check_missing_criteria.txt  check_spelling_by_country.txt  check_truthfulness.txt  gen_customized_cv_criteria.txt  rewrite_cv.txt  sys_gen_draft_cv.txt
source/: evaluator.py  utils.py  writer.py
