[tool.poetry]
name = "genius-cv"
version = "0.1.0"
description = ""
authors = ["Anh Dung Pham <dungpham290198@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-genai = "^1.7.0"
python-dotenv = "^1.0.1"
openai = "^1.67.0"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
